enable global registry

--- a/charts/thanos/values.yaml
+++ b/charts/thanos/values.yaml
@@ -55,12 +55,9 @@ kong-plugins:
 thanos:
   enabled: false
   global:
+    imageRegistry: "quay.io/thanos/thanos/v0.39.2"
     security:
       allowInsecureImages: true
-  image:
-    registry: quay.io
-    repository: thanos/thanos
-    tag: v0.39.2
   existingObjstoreSecret: "thanos"
   query:
     enabled: false
