--- a/charts/external-dns/values.yaml
+++ b/charts/external-dns/values.yaml
@@ -1,5 +1,9 @@
 external-dns:
   enabled: false
+  image:
+    registry: registry.k8s.io
+    repository: external-dns/external-dns
+    tag: v0.18.0
   resources:
     limits:
       cpu: 300m
