allow insecure image

--- a/charts/external-dns/values.yaml
+++ b/charts/external-dns/values.yaml
@@ -1,5 +1,8 @@
 external-dns:
   enabled: false
+  global:
+    security:
+      allowInsecureImages: true
   image:
     registry: registry.k8s.io
     repository: external-dns/external-dns
