--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -200,9 +200,9 @@ kube-state-metrics:
       cpu: 10m
       memory: 20Mi
   image:
-    registry: docker.io
-    repository: bitnami/kube-state-metrics
-    tag: 2.15.0@sha256:5bd00870f1a7c9d57556d3b11e99d4ff3baf3f5a7adc1f9c20d63bf0e50c9682
+    registry: registry.k8s.io
+    repository: kube-state-metrics/kube-state-metrics
+    tag: v2.16.0
 
   extraArgs:
     metric-labels-allowlist: "pods=[*],deployments=[*],nodes=[*]"
@@ -409,8 +409,8 @@ prometheus-main:
     spec:
       enableAdminAPI: true
       thanos:
-        image: quay.io/thanos/thanos:v0.38.0@sha256:ac51a3944e762cd90ed85bf10c4376e70e5f9141f6b7eec431b6580890e97f41
-        version: v0.38.0
+        image: quay.io/thanos/thanos:v0.39.2@sha256:1d022ef4b8eff056a0e3b7822f953d931c5704d068413f2d7ce5266aa96c9e80
+        version: v0.39.2
         objectStorageConfig:
           key: objstore.yml
           name: thanos
