--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -202,7 +202,8 @@ kube-state-metrics:
       memory: 20Mi
   image:
     tag: v2.16.0
-  automountServiceAccountToken: false
+  serviceAccount:
+    automountServiceAccountToken: false
   extraArgs:
     - metric-labels-allowlist: "=pods=[*],deployments=[*],nodes=[*]"
 
@@ -244,6 +245,8 @@ kube-state-metrics:
     monitor:
       enabled: true
       namespace: prometheus
+      namespaceSelector:
+        - prometheus
       additionalLabels:
         prometheus: main
       http:
