--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -206,7 +206,8 @@ kube-state-metrics:
     automountServiceAccountToken: false
   extraArgs:
     - metric-labels-allowlist: "=pods=[*],deployments=[*],nodes=[*]"
-
+  podDisruptionBudget:
+    maxUnavailable: 1
   collectors:
     # - certificatesigningrequests
     # - configmaps
