try fix Invalid value

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -207,7 +207,7 @@ kube-state-metrics:
   extraArgs:
     - metric-labels-allowlist: "=pods=[*],deployments=[*],nodes=[*]"
   podDisruptionBudget:
-    maxUnavailable: 1
+    maxUnavailable: "1"
   collectors:
     # - certificatesigningrequests
     # - configmaps
