--- a/crds/rabbitmq-messaging-topology/4.4.34.rabbitmq.com_exchanges.yaml
+++ b/crds/rabbitmq-messaging-topology/4.4.34.rabbitmq.com_exchanges.yaml
@@ -1,5 +1,5 @@
-# Source: https://raw.githubusercontent.com/rabbitmq/messaging-topology-operator/v{version}/config/crd/bases/rabbitmq.com_superstreams.yaml
-# Version: 1.16.0
+# Source: https://raw.githubusercontent.com/rabbitmq/messaging-topology-operator/v{version}/config/crd/bases/rabbitmq.com_exchanges.yaml
+# Version: 1.17.4
 # VersionOf: rmq-messaging-topology-operator
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -7,22 +7,22 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.17.1
-  name: superstreams.rabbitmq.com
+  name: exchanges.rabbitmq.com
 spec:
   group: rabbitmq.com
   names:
     categories:
     - rabbitmq
-    kind: SuperStream
-    listKind: SuperStreamList
-    plural: superstreams
-    singular: superstream
+    kind: Exchange
+    listKind: ExchangeList
+    plural: exchanges
+    singular: exchange
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - name: v1beta1
     schema:
       openAPIV3Schema:
-        description: SuperStream is the Schema for the queues API
+        description: Exchange is the Schema for the exchanges API
         properties:
           apiVersion:
             description: |-
@@ -42,20 +42,23 @@ spec:
           metadata:
             type: object
           spec:
-            description: SuperStreamSpec defines the desired state of SuperStream
+            description: ExchangeSpec defines the desired state of Exchange
             properties:
+              arguments:
+                type: object
+                x-kubernetes-preserve-unknown-fields: true
+              autoDelete:
+                description: Cannot be updated
+                type: boolean
+              durable:
+                description: Cannot be updated
+                type: boolean
               name:
-                description: Name of the queue; required property.
+                description: Required property; cannot be updated
                 type: string
-              partitions:
-                default: 3
-                description: |-
-                  Number of partitions to create within this super stream.
-                  Defaults to '3'.
-                type: integer
               rabbitmqClusterReference:
                 description: |-
-                  Reference to the RabbitmqCluster that the SuperStream will be created in.
+                  Reference to the RabbitmqCluster that the exchange will be created in.
                   Required property.
                 properties:
                   connectionSecret:
@@ -86,13 +89,10 @@ spec:
                       Defaults to the namespace of the requested resource if omitted.
                     type: string
                 type: object
-              routingKeys:
-                description: |-
-                  Routing keys to use for each of the partitions in the SuperStream
-                  If unset, the routing keys for the partitions will be set to the index of the partitions
-                items:
-                  type: string
-                type: array
+              type:
+                default: direct
+                description: Cannot be updated
+                type: string
               vhost:
                 default: /
                 description: Default to vhost '/'; cannot be updated
@@ -102,7 +102,7 @@ spec:
             - rabbitmqClusterReference
             type: object
           status:
-            description: SuperStreamStatus defines the observed state of SuperStream
+            description: ExchangeStatus defines the observed state of Exchange
             properties:
               conditions:
                 items:
@@ -132,16 +132,10 @@ spec:
                 type: array
               observedGeneration:
                 description: |-
-                  observedGeneration is the most recent successful generation observed for this SuperStream. It corresponds to the
-                  SuperStream's generation, which is updated on mutation by the API Server.
+                  observedGeneration is the most recent successful generation observed for this Exchange. It corresponds to the
+                  Exchange's generation, which is updated on mutation by the API Server.
                 format: int64
                 type: integer
-              partitions:
-                description: Partitions are a list of the stream queue names which
-                  form the partitions of this SuperStream.
-                items:
-                  type: string
-                type: array
             type: object
         type: object
     served: true
