--- a/crds/rabbitmq-messaging-topology/4.4.34.rabbitmq.com_federations.yaml
+++ b/crds/rabbitmq-messaging-topology/4.4.34.rabbitmq.com_federations.yaml
@@ -1,5 +1,5 @@
-# Source: https://raw.githubusercontent.com/rabbitmq/messaging-topology-operator/v{version}/config/crd/bases/rabbitmq.com_permissions.yaml
-# Version: 1.16.0
+# Source: https://raw.githubusercontent.com/rabbitmq/messaging-topology-operator/v{version}/config/crd/bases/rabbitmq.com_federations.yaml
+# Version: 1.17.4
 # VersionOf: rmq-messaging-topology-operator
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -7,22 +7,22 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.17.1
-  name: permissions.rabbitmq.com
+  name: federations.rabbitmq.com
 spec:
   group: rabbitmq.com
   names:
     categories:
     - rabbitmq
-    kind: Permission
-    listKind: PermissionList
-    plural: permissions
-    singular: permission
+    kind: Federation
+    listKind: FederationList
+    plural: federations
+    singular: federation
   scope: Namespaced
   versions:
   - name: v1beta1
     schema:
       openAPIV3Schema:
-        description: Permission is the Schema for the permissions API
+        description: Federation is the Schema for the federations API
         properties:
           apiVersion:
             description: |-
@@ -42,23 +42,55 @@ spec:
           metadata:
             type: object
           spec:
-            description: PermissionSpec defines the desired state of Permission
+            description: |-
+              FederationSpec defines the desired state of Federation
+              For how to configure federation upstreams, see: https://www.rabbitmq.com/federation-reference.html.
             properties:
-              permissions:
+              ackMode:
+                enum:
+                - on-confirm
+                - on-publish
+                - no-ack
+                type: string
+              deletionPolicy:
+                default: delete
                 description: |-
-                  Permissions to grant to the user in the specific vhost; required property.
-                  See RabbitMQ doc for more information: https://www.rabbitmq.com/access-control.html#user-management
-                properties:
-                  configure:
-                    type: string
-                  read:
-                    type: string
-                  write:
-                    type: string
-                type: object
+                  DeletionPolicy defines the behavior of federation in the RabbitMQ cluster when the corresponding custom resource is deleted.
+                  Can be set to 'delete' or 'retain'. Default is 'delete'.
+                enum:
+                - delete
+                - retain
+                type: string
+              exchange:
+                type: string
+              expires:
+                type: integer
+              maxHops:
+                type: integer
+              messageTTL:
+                type: integer
+              name:
+                description: Required property; cannot be updated
+                type: string
+              prefetch-count:
+                type: integer
+              queue:
+                type: string
+              queueType:
+                description: |-
+                  The queue type of the internal upstream queue used by exchange federation.
+                  Defaults to classic (a single replica queue type). Set to quorum to use a replicated queue type.
+                  Changing the queue type will delete and recreate the upstream queue by default.
+                  This may lead to messages getting lost or not routed anywhere during the re-declaration.
+                  To avoid that, set resource-cleanup-mode key to never.
+                  This requires manually deleting the old upstream queue so that it can be recreated with the new type.
+                enum:
+                - classic
+                - quorum
+                type: string
               rabbitmqClusterReference:
                 description: |-
-                  Reference to the RabbitmqCluster that both the provided user and vhost are.
+                  Reference to the RabbitmqCluster that this federation upstream will be created in.
                   Required property.
                 properties:
                   connectionSecret:
@@ -89,14 +121,25 @@ spec:
                       Defaults to the namespace of the requested resource if omitted.
                     type: string
                 type: object
-              user:
-                description: Name of an existing user; must provide user or userReference,
-                  else create/update will fail; cannot be updated
+              reconnectDelay:
+                type: integer
+              resourceCleanupMode:
+                description: |-
+                  Whether to delete the internal upstream queue when federation links stop.
+                  By default, the internal upstream queue is deleted immediately when a federation link stops.
+                  Set to never to keep the upstream queue around and collect messages even when changing federation configuration.
+                enum:
+                - default
+                - never
                 type: string
-              userReference:
-                description: Reference to an existing user.rabbitmq.com object; must
-                  provide user or userReference, else create/update will fail; cannot
-                  be updated
+              trustUserId:
+                type: boolean
+              uriSecret:
+                description: |-
+                  Secret contains the AMQP URI(s) for the upstream.
+                  The Secret must contain the key `uri` or operator will error.
+                  `uri` should be one or multiple uris separated by ','.
+                  Required property.
                 properties:
                   name:
                     default: ""
@@ -110,16 +153,16 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
               vhost:
-                description: Name of an existing vhost; required property; cannot
-                  be updated
+                default: /
+                description: Default to vhost '/'; cannot be updated
                 type: string
             required:
-            - permissions
+            - name
             - rabbitmqClusterReference
-            - vhost
+            - uriSecret
             type: object
           status:
-            description: PermissionStatus defines the observed state of Permission
+            description: FederationStatus defines the observed state of Federation
             properties:
               conditions:
                 items:
@@ -149,8 +192,8 @@ spec:
                 type: array
               observedGeneration:
                 description: |-
-                  observedGeneration is the most recent successful generation observed for this Permission. It corresponds to the
-                  Permission's generation, which is updated on mutation by the API Server.
+                  observedGeneration is the most recent successful generation observed for this Federation. It corresponds to the
+                  Federation's generation, which is updated on mutation by the API Server.
                 format: int64
                 type: integer
             type: object
