--- a/crds/rabbitmq-messaging-topology/4.4.34.rabbitmq.com_permissions.yaml
+++ b/crds/rabbitmq-messaging-topology/4.4.34.rabbitmq.com_permissions.yaml
@@ -1,5 +1,5 @@
-# Source: https://raw.githubusercontent.com/rabbitmq/messaging-topology-operator/v{version}/config/crd/bases/rabbitmq.com_shovels.yaml
-# Version: 1.16.0
+# Source: https://raw.githubusercontent.com/rabbitmq/messaging-topology-operator/v{version}/config/crd/bases/rabbitmq.com_permissions.yaml
+# Version: 1.17.4
 # VersionOf: rmq-messaging-topology-operator
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -7,22 +7,22 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.17.1
-  name: shovels.rabbitmq.com
+  name: permissions.rabbitmq.com
 spec:
   group: rabbitmq.com
   names:
     categories:
     - rabbitmq
-    kind: Shovel
-    listKind: ShovelList
-    plural: shovels
-    singular: shovel
+    kind: Permission
+    listKind: PermissionList
+    plural: permissions
+    singular: permission
   scope: Namespaced
   versions:
   - name: v1beta1
     schema:
       openAPIV3Schema:
-        description: Shovel is the Schema for the shovels API
+        description: Permission is the Schema for the permissions API
         properties:
           apiVersion:
             description: |-
@@ -42,68 +42,23 @@ spec:
           metadata:
             type: object
           spec:
-            description: |-
-              ShovelSpec defines the desired state of Shovel
-              For how to configure Shovel, see: https://www.rabbitmq.com/shovel.html.
+            description: PermissionSpec defines the desired state of Permission
             properties:
-              ackMode:
-                enum:
-                - on-confirm
-                - on-publish
-                - no-ack
-                type: string
-              addForwardHeaders:
-                type: boolean
-              deleteAfter:
-                type: string
-              destAddForwardHeaders:
-                type: boolean
-              destAddTimestampHeader:
-                type: boolean
-              destAddress:
-                description: amqp10 configuration; required if destProtocol is amqp10
-                type: string
-              destApplicationProperties:
-                description: amqp10 configuration
+              permissions:
+                description: |-
+                  Permissions to grant to the user in the specific vhost; required property.
+                  See RabbitMQ doc for more information: https://www.rabbitmq.com/access-control.html#user-management
+                properties:
+                  configure:
+                    type: string
+                  read:
+                    type: string
+                  write:
+                    type: string
                 type: object
-                x-kubernetes-preserve-unknown-fields: true
-              destExchange:
-                description: amqp091 configuration
-                type: string
-              destExchangeKey:
-                description: amqp091 configuration
-                type: string
-              destMessageAnnotations:
-                description: amqp10 configuration
-                type: object
-                x-kubernetes-preserve-unknown-fields: true
-              destProperties:
-                description: amqp10 configuration
-                type: object
-                x-kubernetes-preserve-unknown-fields: true
-              destProtocol:
-                enum:
-                - amqp091
-                - amqp10
-                type: string
-              destPublishProperties:
-                description: amqp091 configuration
-                type: object
-                x-kubernetes-preserve-unknown-fields: true
-              destQueue:
-                description: amqp091 configuration
-                type: string
-              destQueueArgs:
-                type: object
-                x-kubernetes-preserve-unknown-fields: true
-              name:
-                description: Required property; cannot be updated
-                type: string
-              prefetchCount:
-                type: integer
               rabbitmqClusterReference:
                 description: |-
-                  Reference to the RabbitmqCluster that this Shovel will be created in.
+                  Reference to the RabbitmqCluster that both the provided user and vhost are.
                   Required property.
                 properties:
                   connectionSecret:
@@ -134,42 +89,14 @@ spec:
                       Defaults to the namespace of the requested resource if omitted.
                     type: string
                 type: object
-              reconnectDelay:
-                type: integer
-              srcAddress:
-                description: amqp10 configuration; required if srcProtocol is amqp10
+              user:
+                description: Name of an existing user; must provide user or userReference,
+                  else create/update will fail; cannot be updated
                 type: string
-              srcConsumerArgs:
-                description: amqp091 configuration
-                type: object
-                x-kubernetes-preserve-unknown-fields: true
-              srcDeleteAfter:
-                type: string
-              srcExchange:
-                description: amqp091 configuration
-                type: string
-              srcExchangeKey:
-                description: amqp091 configuration
-                type: string
-              srcPrefetchCount:
-                type: integer
-              srcProtocol:
-                enum:
-                - amqp091
-                - amqp10
-                type: string
-              srcQueue:
-                description: amqp091 configuration
-                type: string
-              srcQueueArgs:
-                type: object
-                x-kubernetes-preserve-unknown-fields: true
-              uriSecret:
-                description: |-
-                  Secret contains the AMQP URI(s) to configure Shovel destination and source.
-                  The Secret must contain the key `destUri` and `srcUri` or operator will error.
-                  Both fields should be one or multiple uris separated by ','.
-                  Required property.
+              userReference:
+                description: Reference to an existing user.rabbitmq.com object; must
+                  provide user or userReference, else create/update will fail; cannot
+                  be updated
                 properties:
                   name:
                     default: ""
@@ -183,16 +110,16 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
               vhost:
-                default: /
-                description: Default to vhost '/'; cannot be updated
+                description: Name of an existing vhost; required property; cannot
+                  be updated
                 type: string
             required:
-            - name
+            - permissions
             - rabbitmqClusterReference
-            - uriSecret
+            - vhost
             type: object
           status:
-            description: ShovelStatus defines the observed state of Shovel
+            description: PermissionStatus defines the observed state of Permission
             properties:
               conditions:
                 items:
@@ -222,8 +149,8 @@ spec:
                 type: array
               observedGeneration:
                 description: |-
-                  observedGeneration is the most recent successful generation observed for this Shovel. It corresponds to the
-                  Shovel's generation, which is updated on mutation by the API Server.
+                  observedGeneration is the most recent successful generation observed for this Permission. It corresponds to the
+                  Permission's generation, which is updated on mutation by the API Server.
                 format: int64
                 type: integer
             type: object
