--- a/crds/rabbitmq-messaging-topology/4.4.34.rabbitmq.com_shovels.yaml
+++ b/crds/rabbitmq-messaging-topology/4.4.34.rabbitmq.com_shovels.yaml
@@ -1,5 +1,5 @@
-# Source: https://raw.githubusercontent.com/rabbitmq/messaging-topology-operator/v{version}/config/crd/bases/rabbitmq.com_topicpermissions.yaml
-# Version: 1.16.0
+# Source: https://raw.githubusercontent.com/rabbitmq/messaging-topology-operator/v{version}/config/crd/bases/rabbitmq.com_shovels.yaml
+# Version: 1.17.4
 # VersionOf: rmq-messaging-topology-operator
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -7,20 +7,22 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.17.1
-  name: topicpermissions.rabbitmq.com
+  name: shovels.rabbitmq.com
 spec:
   group: rabbitmq.com
   names:
-    kind: TopicPermission
-    listKind: TopicPermissionList
-    plural: topicpermissions
-    singular: topicpermission
+    categories:
+    - rabbitmq
+    kind: Shovel
+    listKind: ShovelList
+    plural: shovels
+    singular: shovel
   scope: Namespaced
   versions:
   - name: v1beta1
     schema:
       openAPIV3Schema:
-        description: TopicPermission is the Schema for the topicpermissions API
+        description: Shovel is the Schema for the shovels API
         properties:
           apiVersion:
             description: |-
@@ -40,26 +42,77 @@ spec:
           metadata:
             type: object
           spec:
-            description: TopicPermissionSpec defines the desired state of TopicPermission
+            description: |-
+              ShovelSpec defines the desired state of Shovel
+              For how to configure Shovel, see: https://www.rabbitmq.com/shovel.html.
             properties:
-              permissions:
-                description: Permissions to grant to the user to a topic exchange;
-                  required property.
-                properties:
-                  exchange:
-                    description: Name of a topic exchange; required property; cannot
-                      be updated.
-                    type: string
-                  read:
-                    type: string
-                  write:
-                    type: string
-                required:
-                - exchange
+              ackMode:
+                enum:
+                - on-confirm
+                - on-publish
+                - no-ack
+                type: string
+              addForwardHeaders:
+                type: boolean
+              deleteAfter:
+                type: string
+              deletionPolicy:
+                default: delete
+                description: |-
+                  DeletionPolicy defines the behavior of shovel in the RabbitMQ cluster when the corresponding custom resource is deleted.
+                  Can be set to 'delete' or 'retain'. Default is 'delete'.
+                enum:
+                - delete
+                - retain
+                type: string
+              destAddForwardHeaders:
+                type: boolean
+              destAddTimestampHeader:
+                type: boolean
+              destAddress:
+                description: amqp10 configuration; required if destProtocol is amqp10
+                type: string
+              destApplicationProperties:
+                description: amqp10 configuration
                 type: object
+                x-kubernetes-preserve-unknown-fields: true
+              destExchange:
+                description: amqp091 configuration
+                type: string
+              destExchangeKey:
+                description: amqp091 configuration
+                type: string
+              destMessageAnnotations:
+                description: amqp10 configuration
+                type: object
+                x-kubernetes-preserve-unknown-fields: true
+              destProperties:
+                description: amqp10 configuration
+                type: object
+                x-kubernetes-preserve-unknown-fields: true
+              destProtocol:
+                enum:
+                - amqp091
+                - amqp10
+                type: string
+              destPublishProperties:
+                description: amqp091 configuration
+                type: object
+                x-kubernetes-preserve-unknown-fields: true
+              destQueue:
+                description: amqp091 configuration
+                type: string
+              destQueueArgs:
+                type: object
+                x-kubernetes-preserve-unknown-fields: true
+              name:
+                description: Required property; cannot be updated
+                type: string
+              prefetchCount:
+                type: integer
               rabbitmqClusterReference:
                 description: |-
-                  Reference to the RabbitmqCluster that both the provided user and vhost are.
+                  Reference to the RabbitmqCluster that this Shovel will be created in.
                   Required property.
                 properties:
                   connectionSecret:
@@ -90,14 +143,42 @@ spec:
                       Defaults to the namespace of the requested resource if omitted.
                     type: string
                 type: object
-              user:
-                description: Name of an existing user; must provide user or userReference,
-                  else create/update will fail; cannot be updated.
+              reconnectDelay:
+                type: integer
+              srcAddress:
+                description: amqp10 configuration; required if srcProtocol is amqp10
                 type: string
-              userReference:
-                description: Reference to an existing user.rabbitmq.com object; must
-                  provide user or userReference, else create/update will fail; cannot
-                  be updated.
+              srcConsumerArgs:
+                description: amqp091 configuration
+                type: object
+                x-kubernetes-preserve-unknown-fields: true
+              srcDeleteAfter:
+                type: string
+              srcExchange:
+                description: amqp091 configuration
+                type: string
+              srcExchangeKey:
+                description: amqp091 configuration
+                type: string
+              srcPrefetchCount:
+                type: integer
+              srcProtocol:
+                enum:
+                - amqp091
+                - amqp10
+                type: string
+              srcQueue:
+                description: amqp091 configuration
+                type: string
+              srcQueueArgs:
+                type: object
+                x-kubernetes-preserve-unknown-fields: true
+              uriSecret:
+                description: |-
+                  Secret contains the AMQP URI(s) to configure Shovel destination and source.
+                  The Secret must contain the key `destUri` and `srcUri` or operator will error.
+                  Both fields should be one or multiple uris separated by ','.
+                  Required property.
                 properties:
                   name:
                     default: ""
@@ -111,16 +192,16 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
               vhost:
-                description: Name of an existing vhost; required property; cannot
-                  be updated.
+                default: /
+                description: Default to vhost '/'; cannot be updated
                 type: string
             required:
-            - permissions
+            - name
             - rabbitmqClusterReference
-            - vhost
+            - uriSecret
             type: object
           status:
-            description: TopicPermissionStatus defines the observed state of TopicPermission
+            description: ShovelStatus defines the observed state of Shovel
             properties:
               conditions:
                 items:
@@ -150,8 +231,8 @@ spec:
                 type: array
               observedGeneration:
                 description: |-
-                  observedGeneration is the most recent successful generation observed for this TopicPermission. It corresponds to the
-                  TopicPermission's generation, which is updated on mutation by the API Server.
+                  observedGeneration is the most recent successful generation observed for this Shovel. It corresponds to the
+                  Shovel's generation, which is updated on mutation by the API Server.
                 format: int64
                 type: integer
             type: object
