add rmq 4.0.9 image to template

--- a/charts/chart_deps/rabbitmq/rabbitmq-cluster/templates/clusters.yaml
+++ b/charts/chart_deps/rabbitmq/rabbitmq-cluster/templates/clusters.yaml
@@ -15,6 +15,7 @@ metadata:
     {{- include "rabbitmq-cluster.labels" . | nindent 4 }}
 {{- end }}
 spec:
+  image: {{ .Values.image }}
   replicas: {{ .Values.replicas | default "1" }}
   {{- with .Values.resources }}
   resources:
